--- a/Resolution.tex
+++ b/Resolution.tex
@@ -2,12 +2,6 @@ Many measurements of standard model properties or searches for new physics beyon
 In this chapter, an analysis is presented where the jet-\pt resolution in data and in simulated events is derived. The method is based on momentum conservation in the transverse plane of dijet events and offers the possibility to cover a large phase space in \pt and $\eta$. A similar approach was already used in previous studies at $\sqrt{s}=7$\tev~\cite{1748-0221-6-11-P11002, thesis:Schroeder} while a complementary approach utilizes $\gamma +\rm{jet}$ events~\cite{CMS-AN-2010-141, CMS-AN-2011-004, CMS-AN-2013-179}. The measurement shown here is based on collision data corresponding to an integrated luminosity of $19.7$~\fbinv recorded at $\sqrt{s}=8$\tev in 2012. Parts of this Chapter are taken from~\cite{bib:AN2013-416}, having been written by the author.   
 \section{Components of the Jet Response}
 \label{sec:jer_response}
-As introduced in Section~\ref{subsec:jets_response} the transverse momentum of a jet at detector level does not equal the momentum of the corresponding particle-level jet which is typically expressed in the jet response. In simulated events the transverse momentum of the particle-level jet is given by the \pt of the generated jet which is clustered from all stable particles after hadronisation including neutrinos. Thus, the \textit{MC-truth response} can be determined as
-\begin{equation}
-\mathrm{R} = \frac{\pt}{\pt^{\mathrm{gen}}} \; .
-\end{equation}
- In Fig.~\ref{fig:response} an example for a jet response distribution derived from simulation is shown. It is obtained from a QCD multijet sample generated with \pythia 6 tune Z2~\cite{Chatrchyan:2011id} using the CTEQ6L1 PDF set~\cite{Pumplin:2002vw} and processed with the full detector simulation. Since the cross-section of the process has been scaled by $\hat{\pt}^{4.5}$ with the scale parameter $\hat{\pt}$ describing the momentum transfer in the hard process, the sample is reweighted with the inverse in order to regain the physical spectrum. For the calculation of the truth response, the two generated jets in the event with highest transverse momentum are selected. The event is rejected, if one of these two generator jets does not have a corresponding reconstructed jet within a distance of $\Delta R < 0.25$. Otherwise the response is calculated in intervals of $\pt^{gen}$ and $|\eta^{gen}|$  since a dependence on the momentum and the respective detector region is expected, as discussed in Section~\ref{subsec:jets_response}. This is done after applying the jet energy corrections discussed in Section~\ref{subsec:jets_calib} to the detector-level jet momenta. \\
-Apparently the jet response consists generally of two components -- the Gaussian-shaped core around the mean referred to as jet resolution and non-Gaussian components referred to as \textit{tails}. The core of the response is mainly caused by the intrinsic resolution of the various sub-detector components and the precision of the PF and jet clustering algorithms. The response tails however are predominantly caused by severe jet-momentum mismeasurements. These can be due to detector effects like shower leakage and detector noise or also to real physics processes. For instance the lower response tails get populated by semi-leptonic decays of heavy-flavour quarks. These contain neutrinos that carry a certain amount of the momentum and leave the detector unnoticed \todo{more info on intrinsic resolution}. 
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
@@ -16,6 +10,15 @@ Apparently the jet response consists generally of two components -- the Gaussian
   \caption{Jet response function for one example $|\eta_\mathrm{gen}|$ and $p_\mathrm{T, gen}$ interval derived from simulation.}
   \label{fig:response}
 \end{figure}
+As introduced in Section~\ref{subsec:jets_response} the transverse momentum of a jet at detector level does not equal the momentum of the corresponding particle-level jet which is typically expressed in the jet response. In simulated events the transverse momentum of the particle-level jet is given by the \pt of the generated jet which is clustered from all stable particles after hadronisation including neutrinos. Thus, the \textit{MC-truth response} can be determined as
+\begin{equation}
+\mathrm{R} = \frac{\pt}{\pt^{\mathrm{gen}}} \; .
+\end{equation}
+ In Fig.~\ref{fig:response} an example for a jet response distribution derived from simulation is shown. It is obtained from a QCD multijet sample generated with \pythia 6 tune Z2~\cite{Chatrchyan:2011id} using the CTEQ6L1 PDF set~\cite{Pumplin:2002vw} and processed with the full detector simulation. Since the cross-section of the process has been scaled by $\hat{\pt}^{4.5}$ with the scale parameter $\hat{\pt}$ describing the momentum transfer in the hard process, the sample is reweighted with the inverse in order to regain the physical spectrum. For the calculation of the truth response, the two generated jets in the event with highest transverse momentum are selected. The event is rejected, if one of these two generator jets does not have a corresponding reconstructed jet within a distance of $\Delta R < 0.25$. Otherwise the response is calculated in intervals of $\pt^{gen}$ and $|\eta^{gen}|$  since a dependence on the momentum and the respective detector region is expected, as discussed in Section~\ref{subsec:jets_response}. This is done after applying the jet energy corrections discussed in Section~\ref{subsec:jets_calib} to the detector-level jet momenta. \\
+Apparently the jet response consists generally of two components -- the Gaussian-shaped core around the mean referred to as jet resolution and non-Gaussian components referred to as tails. \\
+The core of the response is mainly caused by the intrinsic resolution of the various sub-detector components and the precision of the PF and jet clustering algorithms. Since the jet momenta obtained from the PF constituents are based on tracking- as well as calorimeter-based measurements, the jet resolution is hence closely connected to the evolution of the tracking and calorimeter response with \pt. In the tracking system, the intrinsic resolution is mainly caused by the uncertainty on the track curvature. This is influenced by multiple scattering and the finite hit-position resolution. Typically, these effects cause a degradation of the track-\pt resolution proportional to the transverse momentum. However, the resolution in the calorimeters behaves the other way round and the resolution increases with increasing momentum. At low momenta, the resolution is mainly dominated by electronic noise and pile-up while at medium momenta the resolution is driven by fluctuations of the shower development. At high energies however, the resolution is eventually limited by calorimeter miscalibration and non-uniformities. Furthermore, the response also depends on the jet flavour. Typically, quark jets consist of less and harder particles than gluon jets and thus have a different response due to the non-linearity of the calorimeters.  \\
+The response tails are predominantly caused by severe jet-momentum mismeasurements. These can for instance be due to detector effects. Shower leakage can oocur, if not the whole shower is deposited in the calorimeters. Due to the limited length of the calorimeters some particles might even cross the whole apparatus (\textit{punch-through}). Also malfunctioning detector components can lead to high or low reponse tails by creating artifical signals. Beyond that also real physics processes lead to response tails. For instance the lower response tails get populated by semi-leptonic decays of heavy-flavour quarks. These contain neutrinos that carry a certain amount of the momentum and leave the detector unnoticed resulting in an overall reduced response. 
+
 \section{Basic Concept of the Dijet Asymmetry Method}
 \label{sec:jer_method}
 As introduced in Section~\ref{subsec:jets_response} and~\ref{sec:jer_response} the jet transverse momentum resolution corresponds to the Gaussian-shaped core part of the jet response. In simulated events the particle-level jet momenta are given by the generator-level jet momenta. In data events however,  no such equivalent is present so that the jet resolution is not accessible directly. \\
