--- a/Resolution.tex
+++ b/Resolution.tex
@@ -722,8 +722,8 @@ If however an adjustment of the full response function is needed, the distributi
 Consequently, this method can only be used, if $c > 1$. \\
 Further discussion about the adjustment of the resolution in simulation to data can be found in Section~\ref{subsec:RA2_QCD} where this is actually applied in the estimation of background contributions arising from QCD multijet events to a search for new physics in an all-jet final state.  
 
-\section{Impact of the Resolution Measurement on Other Analyses}
-\label{sec:jer_impact}
+%\section{Impact of the Resolution Measurement on Other Analyses}
+%\label{sec:jer_impact}
 
 
 
