--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3230,6 +3230,32 @@ Uncertainties based on
  primaryClass   = "hep-ph",
 }
 
+@article{Chatrchyan:2014lfa,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Search for new physics in the multijet and missing
+                        transverse momentum final state in proton-proton
+                        collisions at $\sqrt{s}$= 8 TeV}",
+      collaboration  = "CMS Collaboration",
+      journal        = "JHEP",
+      volume         = "1406",
+      pages          = "055",
+      doi            = "10.1007/JHEP06(2014)055",
+      year           = "2014",
+      eprint         = "1402.4770",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SUS-13-012, CERN-PH-EP-2014-015",
+      SLACcitation   = "%%CITATION = ARXIV:1402.4770;%%",
+}
+
+@article{bib:AN-12-350,
+ author = {Autermann, Christian and other},
+ title = {Search for new physics in multijets and missing momentum final state at 8\tev},
+ journal       = {CMS Analysis Note},
+ volume        = {CMS-AN-12-350},
+ note = {Internal documentation},
+ year          = {2012}
+}
 
 @phdthesis{bib:phd:jan,
       author         = {Jan Thomsen},
