--- a/Resolution.tex
+++ b/Resolution.tex
@@ -93,7 +93,7 @@ The simulated event sample is generated with \pythia, as discussed in Section~\r
 \subsection{Selection Criteria}
 \label{subsec:jer_sel_cuts}
 The physics objects used in the analysis are reconstructed with the PF algorithm including charged-hadron subtraction, as described in Sec.~\ref{sec:pf_algo}. Jets are clustered with the anti-$k_T$ algorithm using a distance parameter of $R=0.5$. They are calibrated up to residual correction factors for data. \\
-The event selection described in the following is designed to enhance the dataset with events featuring a typical dijet-like event topology. This is characterized by two hard jets being back-to-back in the $\phi$-plane. Thus, only events with at least two jets are considered for the analysis. These two leading jets in the event have to fulfill loose jet identification criteria which remove fake jets originating from detector noise while maintaining an efficiency of more than $99\%$ for real jets~\cite{CMS-PAS-JME-09-008, CMS-PAS-JME-10-003}. In order to mitigate effects from pile-up only jets with $\pt > 10$\gev are considered for the analysis. As discussed in Section~\ref{sec:jer_application} events with a topology of exactly two high-\pt jets and no further jet activity are almost not existent in realistic collisions. Thus, events with additional jets have to be selected to perform the measurement. Since very soft jets do not necessarily have to belong to the hard interaction, but could arise from pile-up or the underlying event activity, it is required that each event has a third jet passing the \pt threshold of 01\gev while fulfilling also loose jet identification criteria. Furthermore, the additional jet activity has to be restricted to a maximal amount in order to maintain a dijet-like structure of the event. Thus, a maximum threshold for the relative third jet momentum of 
+The event selection described in the following is designed to enhance the dataset with events featuring a typical dijet-like event topology. This is characterized by two hard jets being back-to-back in the $\phi$-plane. Thus, only events with at least two jets are considered for the analysis. These two leading jets in the event have to fulfill loose jet identification (\textit{jet-id}) criteria which remove fake jets originating from detector noise while maintaining an efficiency of more than $99\%$ for real jets~\cite{CMS-PAS-JME-09-008, CMS-PAS-JME-10-003}. In order to mitigate effects from pile-up only jets with $\pt > 10$\gev are considered for the analysis. As discussed in Section~\ref{sec:jer_application} events with a topology of exactly two high-\pt jets and no further jet activity are almost not existent in realistic collisions. Thus, events with additional jets have to be selected to perform the measurement. Since very soft jets do not necessarily have to belong to the hard interaction, but could arise from pile-up or the underlying event activity, it is required that each event has a third jet passing the \pt threshold of 01\gev while fulfilling also loose jet identification criteria. Furthermore, the additional jet activity has to be restricted to a maximal amount in order to maintain a dijet-like structure of the event. Thus, a maximum threshold for the relative third jet momentum of 
 \begin{equation*}
 \alpha_\mathrm{max} < 0.25 
 \end{equation*}
@@ -216,7 +216,7 @@ by determining the parameters a and b. This is done for known $\alpha_{max}$ and
 \end{equation}
 where $dy = y_{\mathrm{measured}} - y_{\mathrm{predicted}}$ and $C$ denotes the covariance matrix. Consequently, the asymmetry width for vanishing additional jet activity is given by $b=\sigma_\mathrm{A}(\alpha_{max} \rightarrow 0)$. Under the assumption that all events that belong to $\alpha$ interval $i$ are also completely included in the next higher $\alpha$ interval $j$~\footnote{This assumption is only almost true since the asymmetry distributions are truncated to reject non-Gaussian components and some events might not fulfill this criterium.} the covariance matrix is given by
 \begin{equation}
-C_{i,j}(\sigma_{A_i},\sigma_{A_j}) = (\Delta \sigma_{A_i})^2 \, \frac{\sigma_{A_i}}{\sigma_{A_j}} \, (\frac{n_i}{n_j})^2 
+C_{i,j}(\sigma_{A_i},\sigma_{A_j}) = (\Delta \sigma_{A_i})^2 \, \frac{\sigma_{A_i}}{\sigma_{A_j}} \, \frac{n_i}{n_j} 
 \end{equation}
 where $n$ is the number of events in that particular $\alpha$ interval. The function minimization itself is performed with the Minuit package~\cite{Minuit}. 
 
