--- a/definitions.tex
+++ b/definitions.tex
@@ -123,6 +123,7 @@
 \newcommand{\et}{\ensuremath{E_{\text{T}}}\xspace}
 \newcommand{\met}{\ensuremath{\slash\mkern-12mu{E}_{\text{T}}}\xspace}
 \newcommand{\metvec}{\ensuremath{\slash\mkern-12mu{\vec{E}}_{\text{T}}}\xspace}
+\newcommand{\NJets}{\ensuremath{N_{\text{Jets}}}\xspace}
 \newcommand{\HT}{\ensuremath{H_{\text{T}}}\xspace}
 \newcommand{\HTvec}{\ensuremath{\vec{H}_{\text{T}}}\xspace}
 \newcommand{\HThlt}{\ensuremath{H^{\text{HLT}}_{\text{T}}}\xspace}
